[package]
name = "twilio-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
http = "0.2.9"
log = "0.4.20"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
simplelog = "0.12.1"
